@@ -1,6 +1,7 @@
 = 3.2.12 (not released yet)
 - improve support for tableless models, add support for count
 - fix div id for nested scaffolds
+- add config.timestamped_messages and config.highlight_messages
 
 = 3.2.11
 - improve support for tableless models and active_scaffold_batch
